# phpypy

./: .actrc.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  pyrightconfig.json
.github/: .dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
docker/: Dockerfile  Dockerfile.dockerignore
phpypy/: __init__.py  _import_guard.py  test_import.py
scripts/: build_runner  compile_php  compile_phpy  extract_libs  os_functions
typings/: phpy.pyi
