[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "phpypy"
authors = [{name = "Wooseop Kim"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/wooseopkim/phpypy"

[project.scripts]
flit = "flit:main"

[tool.flit.sdist]
include = ["lib"]
exclude = ["php-src", "phpy", "docker", "scripts", "**/.git*"]
