[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "phpypy"
authors = [{name = "Wooseop Kim"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/wooseopkim/phpypy"

[project.scripts]
flit = "flit:main"
phpypy = "phpypy:cli"

[dependency-groups]
dev = [
    "flit>=3.10.1",
    "pyright>=1.1.392",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.flit.sdist]
include = ["lib"]
exclude = ["php-src", "phpy", "docker", "scripts", "**/.git*"]

[tool.ruff]
include = ["pyproject.toml", "phpypy/**/*.py"]

[tool.pyright]
include = ["phpypy"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["phpypy"]
